tests/NormalTests/paczka1/fuzzy1/67904283.err
Error in line 1: E2tEJ78mb A659 24,5
Error in line 5: fczwUavzH S213 2,2
Error in line 13: BVunJdri A402 86,2
Error in line 16: koGf S213 54,3
Error in line 24: UKzKcTJB6C S823 53,5
